# DN_Hemispheres_2.0

./: .gitignore  DroneHemis_9mics.py  ISOtoNM.py  LICENSE  README.md  pyproject.toml
Data_out/Ed_M3_10_F05_Y_W_dw_out/: Hem_Ed_M3_10_F05_Y_W_dw_2.xlsx
Example_plots/: 1000_2_Sph.html  125_2_Sph.html  16000_2_Sph.html  2000_2_Sph.html  250_2_Sph.html  31_2_Sph.html  4000_2_Sph.html  500_2_Sph.html  63_2_Sph.html  8000_2_Sph.html  Hem_Ed_M3_10_F05_Y_W_dw_2.xlsx  Overall_2_Sph.html
dntools/: AircraftTools.py  Coord_changes.py  Coord_changes_2.py  DNM_OTB.py  EnvironTools.py  FileTools.py  FreqTools.py  Plots_DN_9mics.py  PyOctaveBand.py  SPL_Filters.py  TimeTools.py
